# satshunt

./: .env.example  .gitignore  CLAUDE.md  COLORS.md  Cargo.toml  FEATURES.md  QUICKSTART.md  README.md  debug_run.sh  flake.nix  run.sh
.github/workflows/: ci.yml
branding/: satshunt.xcf
migrations/: 001_init.sql  002_nfc_cards.sql  003_location_status.sql  004_convert_to_msats.sql  005_refills_log.sql  006_last_withdraw_at.sql  007_pending_donations.sql  008_user_transactions.sql  009_settings.sql  010_pending_withdrawals.sql  011_location_donation_pools.sql  012_forgotten_deltete.sql  013_user_roles.sql  014_remove_unused_tables.sql  015_separate_scans_claims.sql  016_backfill_scans_from_claims.sql
src/: auth.rs  balance.rs  config.rs  db.rs  donation.rs  lib.rs  lightning.rs  lnurl.rs  main.rs  models.rs  ntag424.rs  refill.rs
src/auth/: auth_handler.rs  mod.rs
src/handlers/: api.rs  mod.rs  pages.rs
src/templates/: admin_locations.rs  admin_scans.rs  admin_users.rs  collect.rs  donate.rs  home.rs  layout.rs  location_detail.rs  login.rs  map.rs  mod.rs  new_location.rs  nfc_setup.rs  profile.rs  register.rs  wallet.rs  withdraw.rs
src/templates/components/: donation_invoice.rs  mod.rs
static/: site.webmanifest
static/css/: brutalist.css  colors.css
tests/: db_tests.rs
