[package]
name = "satshunt"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# HTML templating
maud = { version = "0.26", features = ["axum"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono"] }

# Lightning
blitzi = "0.3"
lightning-invoice = "0.32"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# QR code generation
qrcode = "0.14"
image = "0.25"
base64 = "0.22"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment & config
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Authentication
argon2 = { version = "0.5", features = ["std"] }
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"] }

# Workaround for jemalloc build issues
[profile.dev.package.tikv-jemalloc-sys]
opt-level = 1
