[package]
name = "satshunt"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["cookie-private"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
url = "2"

# HTML templating
maud = { version = "0.26", features = ["axum"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
    "chrono",
] }

# Lightning
blitzi = "0.3"
lightning-invoice = "0.32"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# QR code generation
qrcode = "0.14"
image = "0.25"
base64 = "0.22"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Environment & config
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Authentication
argon2 = { version = "0.5", features = ["std"] }
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"] }

# Random generation and hex encoding
rand = "0.8"
hex = "0.4"
urlencoding = "2.1"

# NTAG424 crypto (AES-128-CBC decryption, CMAC verification)
aes = "0.8"
cbc = "0.1"
cmac = "0.7"

# HMAC for token signing
hmac = "0.12"
sha2 = "0.10"

# HTTP client for LN address resolution
reqwest = { version = "0.12", features = ["json"] }

# LNURL bech32 encoding
bech32 = "0.11"

# Async trait support
async-trait = "0.1"


[dev-dependencies]
tempfile = "3"

# Workaround for jemalloc build issues
[profile.dev.package.tikv-jemalloc-sys]
opt-level = 1
